<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_fields_space"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guide"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guide"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".95"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/app_thumbnail"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:contentDescription="@string/app_thumbnail"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/app_name_text"
                style="@style/label_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/default_fields_space"
                app:layout_constraintEnd_toStartOf="@+id/end_guide"
                app:layout_constraintStart_toStartOf="@+id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/app_thumbnail" />

            <ImageView
                android:id="@+id/rating_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="@dimen/default_fields_space"
                android:contentDescription="@string/rating_icon"
                android:src="@drawable/baseline_star_24"
                app:layout_constraintStart_toStartOf="@+id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/app_name_text" />

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_fields_space"
               style="@style/value_text"
                app:layout_constraintStart_toEndOf="@id/rating_icon"
                app:layout_constraintTop_toTopOf="@id/rating_icon" />

            <TextView
                android:id="@+id/version_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_fields_space"
                android:text="@string/version"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/rating_icon" />

            <TextView
                android:id="@+id/version_value"
                style="@style/value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_fields_space"
                app:layout_constraintStart_toEndOf="@id/version_label"
                app:layout_constraintTop_toTopOf="@id/version_label" />

            <TextView
                android:id="@+id/store_label"
                style="@style/label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_fields_space"
                android:text="@string/store"
                app:layout_constraintStart_toStartOf="@+id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/version_label" />

            <TextView
                android:id="@+id/store_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_fields_space"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/store_label"
                app:layout_constraintTop_toTopOf="@id/store_label" />

            <TextView
                android:id="@+id/downloads_label"
                style="@style/label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_fields_space"
                android:text="@string/downloads"
                app:layout_constraintStart_toStartOf="@+id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/store_label" />

            <TextView
                android:id="@+id/downloads_value"
                style="@style/value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_fields_space"
                app:layout_constraintStart_toEndOf="@id/downloads_label"
                app:layout_constraintTop_toTopOf="@id/downloads_label" />

            <TextView
                android:id="@+id/app_size_label"
                style="@style/label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_fields_space"
                android:text="@string/size"
                app:layout_constraintStart_toStartOf="@+id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/downloads_label" />

            <TextView
                android:id="@+id/app_size_value"
                style="@style/value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_fields_space"
                app:layout_constraintStart_toEndOf="@id/app_size_label"
                app:layout_constraintTop_toTopOf="@id/app_size_label" />

            <TextView
                android:layout_marginBottom="@dimen/default_fields_space"
                android:id="@+id/modified_label"
                style="@style/label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_fields_space"
                android:text="@string/last_modified"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/app_size_label" />

            <TextView
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/default_fields_space"
                android:id="@+id/modified_value"
                style="@style/value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_fields_space"
                app:layout_constraintStart_toEndOf="@id/modified_label"
                app:layout_constraintTop_toTopOf="@id/modified_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_marginTop="@dimen/default_fields_space"
        android:id="@+id/download_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_container" />
</androidx.constraintlayout.widget.ConstraintLayout>
